--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,4 +1,18 @@
 ---
+
+- title: MICCAI
+  year: 2024
+  id: miccai2024
+  link: https://conferences.miccai.org/2024/en/
+  deadline: '2023-03-07 23:59:59'
+  timezone: UTC+1
+  place: Marrakesh, Morocco
+  date: October 6 - October 10, 2024
+  start: 2023-10-06
+  end: 2023-10-10
+  sub: CV
+  note: More info <a href='https://conferences.miccai.org/2024/en/'>here</a>.
+
 - title: ISMRM
   year: 2024
   id: ismsrm24
