--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,5 +1,17 @@
 ---
 
+- title: ECDP
+  year: 2024
+  id: ecdp2024
+  link: https://www.ecdp2024.org/
+  deadline: '2024-03-01 23:59:59'
+  timezone: UTC+2
+  place: Vilnius, Lithuania
+  date: June 5 - July 8, 2024
+  start: 2024-06-05
+  end: 2024-06-08
+  sub: PATH
+  note: Conference on digital pathology, includes more and more DL. Only short abstract, good networking event. Abstract deadline not yet mentioned, 1 March 2024 is a guess. More info <a href='https://www.ecdp2024.org/'>here</a>.
 
 
 - title: MIDL
