--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,5 +1,18 @@
 ---
-
+- title: RSNA
+  year: 2024
+  id: rsna24
+  link: https://www.rsna.org/annual-meeting/abstract-submission
+  deadline: '2024-05-01 19:00:00'
+  abstract_deadline: '2024-05-01 19:00:00'
+  timezone: UTC-8
+  place: Chigaco, USA
+  date: December 1 - December 5, 2024
+  start: 2024-12-01
+  end: 2024-12-01
+  sub: CLIN
+  note: More info <a href='https://www.rsna.org/annual-meeting'>here</a>.
+  
 - title: ECCV
   year: 2024
   id: eccv24
